base/staging/instalock-cron/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instalock-cron
spec:
  selector:
    app: instalock-cron
  ports:
    - name: http-cron
      protocol: TCP
      port: 80
      targetPort: 3051
