base/staging/instalock-cron/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instalock-cron-web
  namespace: staging
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`internal.staging.instalock.app`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: instalock-cron
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: instalock-cron-websecure
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`internal.staging.instalock.app`) && PathPrefix(`/api/metrics`)
      kind: Rule
      middlewares:
        - name: basic-auth
      services:
        - name: instalock-cron
          port: 80
    - match: Host(`internal.staging.instalock.app`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: instalock-cron
          port: 80
  tls:
    secretName: staging-instalock-cron-tls
